err/spotsh.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/oauth'...
Listing './lib/python3.5/site-packages/oauth-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './lib/python3.5/site-packages/spotsh'...
Compiling './lib/python3.5/site-packages/spotsh/__init__.py'...
***   File "./lib/python3.5/site-packages/spotsh/__init__.py", line 60
    print self.usage()
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/spotsh/packagebuilder.py'...
***   File "./lib/python3.5/site-packages/spotsh/packagebuilder.py", line 143
    except KeyboardInterrupt, AttributeError:
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/spotsh/packageuploader.py'...
***   File "./lib/python3.5/site-packages/spotsh/packageuploader.py", line 61
    print '\rUploading: %2d%%...' % ((body_file.tell()*100)/body_length),
                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/spotsh-0.0.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
